Project loads without crashing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="about">
        This is our final project!!
     </string>
+    <string name="about_title_text" />
+    <string name="ok" />
 </resources>
