Added High Scores Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="about_title_text" />
     <string name="ok" />
     <string name="_0">0</string>
+    <string name="high_score_text">High Scores</string>
 </resources>
