--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="ok" />
     <string name="_0">0</string>
     <string name="high_score_text">High Scores</string>
+    <string name="login_text">Login</string>
 </resources>
