added a scoreboard fragment and working on implementaion of firebase database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="high_score_text">High Scores</string>
     <string name="login_text">Login</string>
     <string name="username">Guest</string>
+    <string name="time"></string>
 </resources>
